# predictive-maintenance-turbofan-engine

./: .gitignore  README.md  lstm_rul_model.pth  main.py  pyproject.toml
data/processed/: data.h5
notebooks/: 1_exploratory_data_analysis.ipynb  1_exploratory_data_analysis.py  2_machine_learning.ipynb  2_machine_learning.py  _2_machine_learning.py
notebooks/__marimo__/session/: 1_exploratory_data_analysis.py.json  2_machine_learning.py.json
